<resources>
    <string name="return_">Return %s</string>
    <string name="show_romaji">Show romaji</string>
    <string name="show_kana">Show kana</string>
    <string name="no_radicals_selected">No radicals selected</string>
    <string name="configuration">Configuration</string>
    <string name="always_available">Always available</string>
    <string name="always_available_summary">Adds or removes notification icon</string>
    <string name="kanjiEntryText">Kanji (tip: to select and/or copy-paste just long-click the edit box. To search for a part of a word just select it and press search)</string>
    <string name="entryReadingText">Reading (when searching, romaji is automatically translated to both hiragana and katakana)</string>
    <string name="nothing_to_search_for">Nothing to search for</string>
    <string name="no_results">No results</string>
    <string name="searchFailed">Failed to perform search: %s</string>
    <string name="data_files_removed">Data files were removed</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="sdcardCleanup">SD-Card cleanup</string>
    <string name="sdcardCleanupSummary">Deletes all Aedict-downloaded files, including dictionaries</string>
    <string name="warning_less_than_x_mb_free" formatted="false"> Warning: there is less than %d kb of free space on the sd card (%d kb). The download will most probably fail.</string>
    <string name="dictionary_missing_download">The %s dictionary is missing. Do you wish to download it now?</string>
    <string name="downloading_dictionary">Downloading %s</string>
    <string name="interrupted">Interrupted</string>
    <string name="error">Error</string>
    <string name="info">Information</string>
    <string name="failed_to_download_dictionary">Failed to download %s: </string>
    <string name="connecting">Connecting</string>
    <string name="app_name">Aedict</string>
    <string name="searchResults">Aedict: Search Results</string>
    <string name="deleteDictionaryFiles">Dictionary data files are currently taking up to %d kb. Do you wish to clean the files?</string>
    <string name="searchResultsFor">Search results for %s</string>
    <string name="about">http://code.google.com/p/aedict\n\nCopyright (C) 2009 Martin Vyšný\nGUI design: Mitchell Liam\n\nLicensed under GPL3: http://www.gnu.org/licenses/gpl-3.0.html\n\nWhat\'s new: http://baka.sk/aedict/changes-report.html\n\nReferences:\nEDict: http://www.csse.monash.edu.au/~jwb/edict.html\nLucene: http://lucene.apache.org/java/docs/\nKanji recognizer (C) by Todd David Rudick, http://www.cs.arizona.edu/projects/japan/JavaDict/\nSKIP code system (C) by Jack Halpern\nStroke order diagrams (C) Jim Rose, http://www.kanjicafe.com\nVerb inflection examples (C) by Tim R. Matheson, http://www.timwerx.net/language/jpverbs/</string>
    <string name="aboutCaption">About</string>
    <string name="exactMatch">Exact match</string>
    <string name="enterKanaRomajiEnglish">Enter kana/romaji/english</string>
    <string name="search">Search</string>
    <string name="searching">Searching</string>
    <string name="entryDetail">Entry detail</string>
    <string name="copy">Copy</string>
    <string name="copyToClipboard">Copy to clipboard</string>
    <string name="copied">Copied "%s" to the clipboard</string>
    <string name="kanaTable">Kana Table</string>
    <string name="showkanaTable">Show kana table</string>
    <string name="romanization">Romanization</string>
    <string name="romanizationSummary">Which romanization to use, both for romaji input and for display</string>
    <string name="analyze">Analyze</string>
    <string name="kanjiAnalysisOf">Kanji analysis of %s</string>
    <string name="kanjiRadicalLookup">Radical Lookup</string>
    <string name="kanjiDrawLookup">Kanjipad</string>
    <string name="kanjiLookup">Kanji Lookup</string>
    <string name="radicals">Radicals</string>
    <string name="clear">Clear</string>
    <string name="useRomaji">Show romaji</string>
    <string name="useRomaji_summary">Show romaji instead of katakana/hiragana</string>
    <string name="strokes">Strokes: %d</string>
    <string name="plusMinusBetween0And2">The +- number must be 0..2</string>
    <string name="skipLookup">Skip Lookup</string>
    <string name="skipLookupHint">Please select the visual style of the kanji. Look at the kanji in question and decide if it can visually be divided as (choose the first that applies):</string>
    <string name="skip11">1 八</string>
    <string name="skip11explanation">into <b>left</b> and right sides, such as: 行 引 相 時 八 噛</string>
    <string name="skip12">2 二</string>
    <string name="skip12explanation">into <b>top</b> and bottom parts, such as: 学 見 京 字 分 二 春</string>
    <string name="skip13">3 厂</string>
    <string name="skip13explanation">into an <b>enclosing</b> structure and an internal structure, such as: 気 週 間 広 国 月 通</string>
    <string name="skip14">4 西</string>
    <string name="skip14explanation">none of the above, such as: 下 西 士 自 中 事 火 女</string>
    <string name="skip41">1 下</string>
    <string name="skip41explanation">has a <b>horizontal line at the top</b> (e.g. 下, 西)</string>
    <string name="skip42">2 士</string>
    <string name="skip42explanation">has a <b>horizontal line at the bottom</b> (e.g. 士, 自).</string>
    <string name="skip43">3 中</string>
    <string name="skip43explanation">has a <b>vertical line through</b> (e.g. 中, 事)</string>
    <string name="skip44">4 女</string>
    <string name="skip44explanation">none of the above (e.g. 火, 女)</string>
    <string name="skip1tutorial">Count the strokes in the leftmost part and then the number of strokes left in the right part. For example, in kanji 引, leftmost part has three strokes, and the right half has one.</string>
    <string name="skip2tutorial">Count the strokes in the topmost part and then the number of strokes left in the lower part. For example, in kanji 春, topmost part has five strokes, and the lower half has four.</string>
    <string name="skip3tutorial">Count the strokes in the enclosing part and then the number of strokes left in the internal part. For example, in kanji 通, enclosing part has three strokes, and the internal part has seven.</string>
    <string name="skip1first">Number of strokes in the leftmost part:</string>
    <string name="skip1second">Number of strokes in the right part:</string>
    <string name="skip2first">Number of strokes in the topmost part:</string>
    <string name="skip2second">Number of strokes in the lower part:</string>
    <string name="skip3first">Number of strokes in the enclosing part:</string>
    <string name="skip3second">Number of strokes in the internal part:</string>
    <string name="skip4">Please count all the strokes in the character, and then choose the first from the options listed below:</string>
    <string name="numberOfStrokes">Number of strokes:</string>
    <string name="edictDictionary">Edict dictionary</string>
    <string name="edictDictionarySummary">Use given dictionary for search and translation</string>
    <string name="analyzeWords">Analyze as words</string>
    <string name="analyzeCharacters">Analyze as characters</string>
    <string name="translate">Translate</string>
    <string name="jpTranslate">Translate japanese text. Copy-paste the text here (e.g. from a browser). Simple, stupid and slow :-)</string>
    <string name="analyzing">Analyzing</string>
    <string name="downloadDictionaries">Download dictionary</string>
    <string name="downloadDictionariesSummary">Download additional dictionaries</string>
    <string name="downloadingDictionaryList">Downloading list of dictionaries</string>
    <string name="availableDicts">Available dictionaries (click on the name to install)</string>
    <string name="notepad">Notepad</string>
    <string name="delete">Delete</string>
    <string name="deleteAll">Delete all</string>
    <string name="addToNotepad">Add to notepad</string>
    <string name="searchingInDictionary">Searching in the %s dictionary</string>
    <string name="deinflectVerbs">Deinflect verbs</string>
    <string name="kanjiDrawWarning">Please note that you must use the proper stroke order and count, otherwise your kanji will not be recognized. Also it does not recognize hiragana nor katakana characters.</string>
    <string name="donate">Donate</string>
    <string name="searchInExamples">Search in examples</string>
    <string name="showSod">Show stroke order</string>
    <string name="resetIntroductions">Reset introductions</string>
    <string name="resetIntroductionsSummary">All introduction dialogs will be shown again</string>
    <string name="whatsNew">What\'s New in %s</string>
    <string name="whatsNewText">For full changelog please see http://baka.sk/aedict/changes-report.html\n\n- You can now force ya with xya and \'ya.\n- Implemented Notepad.sendTo.\n- MainActivity should now show soft input keyboard implicitly.\n- Pressing the Enter key in Main Activity will now trigger intelligent search.\n- Tanaka analysis is now used whenever applicable.\n- Notepad backup-to-SDCard/restore support added.</string>
    <string name="searchInEdict">Search in the Edict dictionary</string>
    <string name="showConjugations">Show verb conjugations</string>
    <string name="iDoSomething">I do something.</string>
    <string name="iDoSomethingPolitely">I do something. (politely)</string>
    <string name="plainFormExamples">Mama wa mise de _banana_ o kau.\nMom buys/will buy bananas at the store.\n_Jimu_ wa manga o yomu.\nJim will read a comic book.\nOjii-san wa sugu kaeru.\nGrandpa will return soon.\nWatashi wa ringo o taberu.\nI\'ll eat an apple.\n_Naomi_ wa _terebi_ o miru.\nNaomi will watch TV.</string>
    <string name="politeFormExamples">Mama wa mise de _banana_ o kaimasu.\nMom buys/will buy bananas at the store.\n_jimu_ wa manga o yomimasu.\nJim will read a comic book.\nOjii-san wa sugu kaerimasu.\nGrandpa will return soon.\nWatashi wa ashita kimemasu.\nI\'ll decide tomorrow.\nJerry wa sugu heya kara demasu.\nJerry will come out of the room soon.\nAyako wa mainichi _terebi_ o mimasu.\nAyako watches the TV every day.</string>
    <string name="iDoNotDoSomething">I do not do something.</string>
    <string name="iDoNotDoSomethingPolitely">I do not do something. (politely)</string>
    <string name="politeNegativeFormExamples">Watashi wa kasa o kaimasen.\nI\'m not going to buy an umbrella.\nKare wa machimasen.\nHe won\'t wait.\nKimiko wa oosaka ni ikimasen.\nKimiko isn\'t going to Osaka.\nWatashi wa ima tabemasen.\nI\'m not going to eat now.\nKanojo wa kasa o karimasen.\nShe isn\'t going to borrow an umbrella.</string>
    <string name="iDidSomething">I did something.</string>
    <string name="iDidSomethingPolitely">I did something. (politely)</string>
    <string name="politePastFormExamples">_jon_ wa Sendai ni ikimashita.\nJohn went to Sendai.\nKodomotachi wa kouen de asobimashita.\nThe children played at the park.\nYoshi wa ringo o tabemashita.\nYoshi ate an apple.\nShizu wa manga o kaimashita.\nShizu bought a comic book.\n_Bobbu_ wa sono eiga o mimashita.\nBob saw that movie.</string>
    <string name="iDidNotDoSomething">I didn\'t do something.</string>
    <string name="iDidNotDoSomethingPolitely">I didn\'t do something. (politely)</string>
	<string name="stroke">Stroke:</string>
	<string name="grade">Grade:</string>
	<string name="jlptLevel">JLPT Level:</string>
	<string name="skip">SKIP:</string>
	<string name="strokeOrder">Stroke order</string>
	<string name="exampleSentences">Example sentences</string>
	<string name="showDetailed">Show detailed</string>
	<string name="more">More...</string>
	<string name="undo">Undo</string>
    <string name="radicals_colon">Radicals:</string>
	<string name="radicalNumber">Rad. Num.:</string>
</resources>