<?xml version="1.0" encoding="utf-8"?>
	<!--
		* Copyright (C) 2009-2010 OpenIntents.org * * Licensed under the
		Apache License, Version 2.0 (the "License"); * you may not use this
		file except in compliance with the License. * You may obtain a copy of
		the License at * * http://www.apache.org/licenses/LICENSE-2.0 * *
		Unless required by applicable law or agreed to in writing, software *
		distributed under the License is distributed on an "AS IS" BASIS, *
		WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
		implied. * See the License for the specific language governing
		permissions and * limitations under the License.
	-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<CheckBoxPreference android:key="alwaysAvailable"
		android:defaultValue="false" android:title="@string/always_available"
		android:summary="@string/always_available_summary" />
	<CheckBoxPreference android:key="useRomaji"
		android:defaultValue="false" android:title="@string/useRomaji"
		android:summary="@string/useRomaji_summary" />
	<ListPreference android:key="romanization"
		android:defaultValue="Hepburn" android:title="@string/romanization"
		android:summary="@string/romanizationSummary"
		android:entries="@array/romanizations" android:entryValues="@array/romanizations_enum"
		android:dialogTitle="@string/romanization" />
	<ListPreference android:key="dictionaryName"
		android:defaultValue="Default" android:title="@string/edictDictionary"
		android:summary="@string/edictDictionarySummary"
		android:dialogTitle="@string/edictDictionary" />
	<PreferenceScreen android:key="downloadDictionaries" android:title="@string/downloadDictionaries"
		android:summary="@string/downloadDictionariesSummary">
	</PreferenceScreen>
	<PreferenceScreen android:key="sdcardCleanup" android:title="@string/sdcardCleanup"
		android:summary="@string/sdcardCleanupSummary">
	</PreferenceScreen>
	<PreferenceScreen android:key="resetIntroductions" android:title="@string/resetIntroductions"
		android:summary="@string/resetIntroductionsSummary">
	</PreferenceScreen>
</PreferenceScreen>
