<?xml version="1.0" encoding="UTF-8"?>
	<!--
		Aedict - an EDICT browser for Android Copyright (C) 2007 Martin Vysny

		This program is free software: you can redistribute it and/or modify
		it under the terms of the GNU General Public License as published by
		the Free Software Foundation, either version 3 of the License, or (at
		your option) any later version. This program is distributed in the
		hope that it will be useful, but WITHOUT ANY WARRANTY; without even
		the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
		PURPOSE. See the GNU General Public License for more details. You
		should have received a copy of the GNU General Public License along
		with this program. If not, see <http://www.gnu.org/licenses/>.
	-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" android:layout_width="fill_parent">
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent">
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/skip4" />
		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:gravity="center">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/numberOfStrokes" />
			<EditText android:layout_height="wrap_content"
				android:id="@+id/editSkipNumberOfStrokes" android:layout_width="fill_parent"
				android:inputType="number" android:imeOptions="actionDone"
				android:layout_weight="1" />
		</LinearLayout>
		<ImageView android:src="@android:drawable/divider_horizontal_dark"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:gravity="center">
			<Button android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/skip11"
				android:id="@+id/skip11" android:textSize="40px" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/skip11explanation"
				android:textAppearance="?android:attr/textAppearanceLarge" />
		</LinearLayout>
		<ImageView android:src="@android:drawable/divider_horizontal_dark"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:gravity="center">
			<Button android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/skip12"
				android:id="@+id/skip12" android:textSize="40px" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/skip12explanation"
				android:textAppearance="?android:attr/textAppearanceLarge" />
		</LinearLayout>
		<ImageView android:src="@android:drawable/divider_horizontal_dark"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:gravity="center">
			<Button android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/skip13"
				android:id="@+id/skip13" android:textSize="40px" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/skip13explanation"
				android:textAppearance="?android:attr/textAppearanceLarge" />
		</LinearLayout>
		<ImageView android:src="@android:drawable/divider_horizontal_dark"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:gravity="center">
			<Button android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/skip14"
				android:id="@+id/skip14" android:textSize="40px" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/skip14explanation"
				android:textAppearance="?android:attr/textAppearanceLarge" />
		</LinearLayout>
	</LinearLayout>
</ScrollView>
