<?xml version="1.0" encoding="utf-8"?>
	<!--
		Aedict - an EDICT browser for Android Copyright (C) 2007 Martin Vysny

		This program is free software: you can redistribute it and/or modify
		it under the terms of the GNU General Public License as published by
		the Free Software Foundation, either version 3 of the License, or (at
		your option) any later version. This program is distributed in the
		hope that it will be useful, but WITHOUT ANY WARRANTY; without even
		the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
		PURPOSE. See the GNU General Public License for more details. You
		should have received a copy of the GNU General Public License along
		with this program. If not, see <http://www.gnu.org/licenses/>.
	-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="wrap_content" android:gravity="center"
	android:id="@+id/kanjidrawRoot">
	<LinearLayout android:orientation="horizontal" android:id="@+id/kanjiButtonBar"
		android:layout_width="fill_parent" android:layout_height="wrap_content"/>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:gravity="center">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/textStrokes" />
		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/undo"
			android:id="@+id/undo"></Button>
		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/clear"
			android:id="@+id/btnKanjiClear"></Button>
		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/more"
			android:id="@+id/more"></Button>
		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/search"
			android:id="@+id/btnKanjiSearch"></Button>
	</LinearLayout>
</LinearLayout>
