<?xml version="1.0" encoding="utf-8"?>
	<!--
		Aedict - an EDICT browser for Android Copyright (C) 2007 Martin Vysny

		This program is free software: you can redistribute it and/or modify
		it under the terms of the GNU General Public License as published by
		the Free Software Foundation, either version 3 of the License, or (at
		your option) any later version. This program is distributed in the
		hope that it will be useful, but WITHOUT ANY WARRANTY; without even
		the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
		PURPOSE. See the GNU General Public License for more details. You
		should have received a copy of the GNU General Public License along
		with this program. If not, see <http://www.gnu.org/licenses/>.
	-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="wrap_content" android:gravity="center">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">
		<CheckBox android:layout_height="wrap_content" android:id="@+id/notepadExactMatch"
			android:text="@string/exactMatch" android:layout_width="wrap_content"
			android:layout_weight="1" />
		<CheckBox android:layout_height="wrap_content" android:id="@+id/notepadDeinflect"
			android:text="@string/deinflectVerbs" android:layout_width="wrap_content"
			android:layout_weight="1" />
		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/search"
			android:id="@+id/btnNotepadSearch" />
	</LinearLayout>
	<EditText android:layout_height="wrap_content" android:id="@+id/editNotepadSearch"
		android:layout_width="fill_parent" android:inputType="text"
		android:imeOptions="actionDone" />
	<TabHost android:layout_height="fill_parent"
		android:layout_width="fill_parent" android:id="@+id/tabs"
		android:visibility="gone">
		<TabWidget android:id="@android:id/tabs"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />
		<FrameLayout android:id="@android:id/tabcontent"
			android:layout_width="fill_parent" android:layout_height="fill_parent"
			android:paddingTop="65dip">
		</FrameLayout>
	</TabHost>
	<ListView android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:id="@android:id/list" />
</LinearLayout>
