<?xml version="1.0" encoding="utf-8"?>
	<!--
		Aedict - an EDICT browser for Android Copyright (C) 2007 Martin Vysny

		This program is free software: you can redistribute it and/or modify
		it under the terms of the GNU General Public License as published by
		the Free Software Foundation, either version 3 of the License, or (at
		your option) any later version. This program is distributed in the
		hope that it will be useful, but WITHOUT ANY WARRANTY; without even
		the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
		PURPOSE. See the GNU General Public License for more details. You
		should have received a copy of the GNU General Public License along
		with this program. If not, see <http://www.gnu.org/licenses/>.
	-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="vertical"
		android:paddingRight="?android:attr/scrollbarSize"
		android:paddingLeft="?android:attr/scrollbarSize"
		android:layout_weight="1" android:id="@+id/main">
		<TextView android:layout_height="wrap_content" android:id="@+id/kanji"
			android:text="K" android:layout_width="fill_parent" android:gravity="center_horizontal"
			android:textColor="?android:attr/textColorPrimary" android:textSize="100dp"></TextView>
		<TextView android:layout_height="wrap_content" android:id="@+id/onyomi"
			android:text="ONYOMI" android:layout_width="fill_parent"
			android:textSize="18.0px" android:textColor="#99F" android:gravity="center_horizontal"/>
		<TextView android:layout_height="wrap_content" android:id="@+id/kunyomi"
			android:text="KUNYOMI" android:layout_width="fill_parent"
			android:textSize="18.0px" android:textColor="#99F" android:gravity="center_horizontal"/>
		<TextView android:layout_height="wrap_content" android:id="@+id/namae"
			android:text="NAMAE" android:layout_width="fill_parent"
			android:textSize="18.0px" android:gravity="center_horizontal"/>
		<TextView android:layout_height="wrap_content" android:id="@+id/english"
			android:text="ENGLISH" android:layout_width="fill_parent" android:gravity="center_horizontal" />
	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal" >
		<Button android:layout_height="wrap_content" android:id="@+id/no"
			android:text="@string/no" android:layout_width="wrap_content"
			android:layout_weight="1" />
		<Button android:layout_height="wrap_content" android:id="@+id/showDetailed"
			android:text="@string/showDetailed" android:layout_width="wrap_content"
			android:layout_weight="1" />
		<Button android:layout_height="wrap_content" android:id="@+id/yes"
			android:text="@string/yes" android:layout_width="wrap_content"
			android:layout_weight="1" />
	</LinearLayout>
</LinearLayout>
